add nfts swagger documentation
